syntax = "proto3";

option csharp_namespace = "Api";

package api;

service LeaderBoard {
    rpc AddScore (PlayerScore) returns (PlayerRank);
    rpc GetRank (PlayerId) returns (PlayerRank);
}

message PlayerId {
    string id = 1;
}

message PlayerScore {
    string id = 1;
    int32 score = 2;
}

message PlayerRank {
    int32 score = 1;
    int32 rank = 2;
}


